--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "@bauxite/bauxite",
   "author": "Jim O'Brien <npm@jimmed.net>",
+  "scripts": {
+    "test": "lerna run test"
+  },
   "devDependencies": {
+    "jest": "^21.2.1",
     "lerna": "^2.5.1"
   }
 }
