--- a/packages/minecraft-assets/package.json
+++ b/packages/minecraft-assets/package.json
@@ -6,6 +6,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "graphql": "^0.11.7",
+    "graphql-iso-date": "^3.3.0",
+    "graphql-tools": "^2.12.0",
     "lodash": "^4.17.4",
     "make-fetch-happen": "^2.6.0"
   },
