--- a/packages/minecraft-assets/package.json
+++ b/packages/minecraft-assets/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "serve": "./bin/serve.js"
   },
   "dependencies": {
     "graphql": "^0.11.7",
@@ -13,6 +14,9 @@
     "make-fetch-happen": "^2.6.0"
   },
   "devDependencies": {
+    "apollo-server-express": "^1.2.0",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
     "jest": "^21.2.1"
   }
 }
