--- a/packages/minecraft-auth/package.json
+++ b/packages/minecraft-auth/package.json
@@ -1,4 +1,8 @@
 {
   "name": "@bauxite/minecraft-auth",
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "main": "lib/index.js",
+  "dependencies": {
+    "node-fetch": "^1.7.3"
+  }
 }
