--- a/packages/minecraft-world/package.json
+++ b/packages/minecraft-world/package.json
@@ -1,4 +1,25 @@
 {
   "name": "@bauxite/minecraft-world",
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "scripts": {
+    "test": "jest",
+    "serve": "nodemon --ext js,graphql ./bin/serve.js"
+  },
+  "dependencies": {
+    "apollo-server-express": "^1.3.2",
+    "date-fns": "^1.29.0",
+    "fs-extra": "^5.0.0",
+    "graphql": "^0.12.3",
+    "graphql-iso-date": "^3.3.0",
+    "graphql-tools": "^2.14.1",
+    "lodash.get": "^4.4.2",
+    "lodash.throttle": "^4.1.1",
+    "node-int64": "^0.4.0",
+    "prismarine-nbt": "^1.1.1"
+  },
+  "devDependencies": {
+    "express": "^4.16.2",
+    "jest": "^22.0.3",
+    "nodemon": "^1.14.1"
+  }
 }
