--- a/packages/launcher-cli/package.json
+++ b/packages/launcher-cli/package.json
@@ -2,9 +2,10 @@
   "name": "@bauxite/launcher-cli",
   "version": "0.0.0",
   "dependencies": {
-    "inquirer": "^4.0.1",
-    "yargs": "^10.0.3",
-    "@bauxite/minecraft-assets": "^0.0.0",
-    "@bauxite/minecraft-installer": "^0.0.0"
+    "@bauxite/launcher-api": "^0.0.0",
+    "chalk": "^2.3.0",
+    "inquirer": "^4.0.2",
+    "tty-table": "^2.5.5",
+    "yargs": "^10.0.3"
   }
 }
