--- a/packages/launcher-electron/package.json
+++ b/packages/launcher-electron/package.json
@@ -1,4 +1,7 @@
 {
   "name": "@bauxite/launcher-electron",
-  "version": "0.0.0"
+  "version": "0.1.0-alpha.05e4b652",
+  "publishConfig": {
+    "access": "public"
+  }
 }
