--- a/packages/launcher-api/package.json
+++ b/packages/launcher-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bauxite/launcher-api",
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.05e4b652",
   "main": "./lib/index.js",
   "author": "Jim O'Brien <bauxite@jimmed.net>",
   "scripts": {
@@ -8,8 +8,8 @@
     "serve": "nodemon --ext js,graphql ./bin/serve.js"
   },
   "dependencies": {
-    "@bauxite/minecraft-assets": "^0.0.0",
-    "@bauxite/minecraft-installer": "^0.0.0",
+    "@bauxite/minecraft-assets": "^0.1.0-alpha.05e4b652",
+    "@bauxite/minecraft-installer": "^0.1.0-alpha.05e4b652",
     "apollo-server-express": "^1.3.2",
     "decompress": "^4.2.0",
     "fs-extra": "^5.0.0",
@@ -23,5 +23,8 @@
   "devDependencies": {
     "express": "^4.16.2",
     "nodemon": "^1.14.7"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
