--- a/packages/minecraft-auth/package.json
+++ b/packages/minecraft-auth/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@bauxite/minecraft-auth",
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.05e4b652",
   "main": "lib/index.js",
   "dependencies": {
     "node-fetch": "^1.7.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
