--- a/packages/server-status-page/package.json
+++ b/packages/server-status-page/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bauxite/server-status-page",
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.05e4b652",
   "dependencies": {
     "apollo-client-preset": "^1.0.6",
     "classnames": "^2.2.5",
@@ -27,5 +27,8 @@
     "react-app-rewire-yarn-workspaces": "^1.0.2",
     "react-app-rewired": "^1.4.0",
     "sass-loader": "^6.0.6"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
