--- a/packages/launcher-graphql/package.json
+++ b/packages/launcher-graphql/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "serve": "nodemon --ext js,graphql ./bin/serve.js"
   },
+  "bin": {
+    "bauxite-gql": "./bin/serve.js"
+  },
   "dependencies": {
     "@bauxite/launcher-api": "^0.1.0-alpha.10a87555",
     "apollo-server-express": "^1.3.2",
