--- a/packages/launcher-graphql/package.json
+++ b/packages/launcher-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bauxite/launcher-graphql",
-  "version": "0.1.0-alpha.c1dfbdc6",
+  "version": "0.1.0-alpha.e46bc55d",
   "author": "Jim O'Brien <bauxite@jimmed.net>",
   "scripts": {
     "serve": "nodemon --ext js,graphql ./bin/serve.js"
@@ -9,7 +9,7 @@
     "bauxite-gql": "./bin/serve.js"
   },
   "dependencies": {
-    "@bauxite/launcher-api": "^0.1.0-alpha.10a87555",
+    "@bauxite/launcher-api": "^0.1.0-alpha.e46bc55d",
     "apollo-server-express": "^1.3.2",
     "express": "^4.16.2",
     "graphql": "^0.12.3",
@@ -18,5 +18,8 @@
   },
   "devDependencies": {
     "nodemon": "^1.14.7"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
