--- a/packages/minecraft-auth/package.json
+++ b/packages/minecraft-auth/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bauxite/minecraft-auth",
   "version": "0.1.0-alpha.c1dfbdc6",
-  "main": "lib/index.js",
+  "main": "./lib/index.js",
   "dependencies": {
     "node-fetch": "^1.7.3"
   },
