--- a/packages/launcher-graphql/package.json
+++ b/packages/launcher-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bauxite/launcher-graphql",
-  "version": "0.1.0-alpha.e46bc55d",
+  "version": "0.1.0",
   "author": "Jim O'Brien <bauxite@jimmed.net>",
   "scripts": {
     "serve": "nodemon --ext js,graphql ./bin/serve.js"
