--- a/packages/launcher-ui/package.json
+++ b/packages/launcher-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bauxite/launcher-ui",
-  "version": "0.1.0-alpha.c1dfbdc6",
+  "version": "0.1.0",
   "publishConfig": {
     "access": "public"
   }
