--- a/packages/minecraft-assets/package.json
+++ b/packages/minecraft-assets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bauxite/minecraft-assets",
-  "version": "0.1.0-alpha.c1dfbdc6",
+  "version": "0.1.0",
   "main": "index.js",
   "scripts": {
     "test": "jest",
