--- a/packages/minecraft-instance/package.json
+++ b/packages/minecraft-instance/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bauxite/minecraft-instance",
-  "version": "0.1.0-alpha.c1dfbdc6",
+  "version": "0.1.0",
   "scripts": {
     "test": "jest",
     "serve": "nodemon --ext js,graphql ./bin/serve.js"
