--- a/packages/server-status-page/package.json
+++ b/packages/server-status-page/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bauxite/server-status-page",
-  "version": "0.1.0-alpha.c1dfbdc6",
+  "version": "0.1.0",
   "dependencies": {
     "apollo-client-preset": "^1.0.6",
     "classnames": "^2.2.5",
