--- a/packages/launcher-graphql/package.json
+++ b/packages/launcher-graphql/package.json
@@ -9,12 +9,14 @@
     "bauxite-gql": "./bin/serve.js"
   },
   "dependencies": {
-    "@bauxite/launcher-api": "^0.1.0-alpha.e46bc55d",
+    "@bauxite/launcher-api": "^0.1.0",
     "apollo-server-express": "^1.3.2",
     "express": "^4.16.2",
+    "express-graphiql": "^1.0.0",
     "graphql": "^0.12.3",
     "graphql-iso-date": "^3.3.0",
-    "graphql-tools": "^2.14.1"
+    "graphql-tools": "^2.14.1",
+    "open": "^0.0.5"
   },
   "devDependencies": {
     "nodemon": "^1.14.7"
