--- a/packages/launcher-graphql/package.json
+++ b/packages/launcher-graphql/package.json
@@ -3,12 +3,15 @@
   "version": "0.2.0",
   "author": "Jim O'Brien <bauxite@jimmed.net>",
   "scripts": {
-    "postinstall": "cd ../../node_modules/pkg && yarn run prepare && chmod +x ./lib-es5/bin.js",
     "serve": "nodemon --ext js,graphql ./bin/serve.js",
-    "build:linux-x64": "../../node_modules/pkg/lib-es5/bin.js . -t node9-linux-x64 --output ./dist/bauxite-gql-linux-x64",
-    "build:freebsd-x64": "../../node_modules/pkg/lib-es5/bin.js . -t node9-freebsd-x64 --output ./dist/bauxite-gql-freebsd-x64",
-    "build:win-x64": "../../node_modules/pkg/lib-es5/bin.js . -t node9-win-x64 --output ./dist/bauxite-gql-win-x64",
-    "build:macos-x64": "../../node_modules/pkg/lib-es5/bin.js . -t node9-macos-x64 --output ./dist/bauxite-gql-macos-x64"
+    "build:linux-x64":
+      "../../node_modules/pkg/lib-es5/bin.js . -t node9-linux-x64 --output ./dist/bauxite-gql-linux-x64",
+    "build:freebsd-x64":
+      "../../node_modules/pkg/lib-es5/bin.js . -t node9-freebsd-x64 --output ./dist/bauxite-gql-freebsd-x64",
+    "build:win-x64":
+      "../../node_modules/pkg/lib-es5/bin.js . -t node9-win-x64 --output ./dist/bauxite-gql-win-x64",
+    "build:macos-x64":
+      "../../node_modules/pkg/lib-es5/bin.js . -t node9-macos-x64 --output ./dist/bauxite-gql-macos-x64"
   },
   "bin": {
     "bauxite-gql": "./bin/serve.js"
@@ -24,8 +27,7 @@
     "open": "^0.0.5"
   },
   "devDependencies": {
-    "nodemon": "^1.14.7",
-    "pkg": "https://github.com/kumi-health/pkg.git"
+    "nodemon": "^1.14.7"
   },
   "publishConfig": {
     "access": "public"
