--- a/packages/launcher-cli/package.json
+++ b/packages/launcher-cli/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "dependencies": {
     "@bauxite/launcher-api": "^0.1.0",
+    "asciify-image": "^0.1.1",
     "chalk": "^2.3.0",
     "cli-progress-bar": "^1.0.1",
     "inquirer": "^4.0.2",
+    "make-fetch-happen": "^2.6.0",
+    "ora": "^1.3.0",
     "tty-table": "^2.5.5",
     "yargs": "^10.0.3"
   },
