--- a/packages/launcher-graphql/package.json
+++ b/packages/launcher-graphql/package.json
@@ -1,23 +1,19 @@
 {
   "name": "@bauxite/launcher-graphql",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "author": "Jim O'Brien <bauxite@jimmed.net>",
   "scripts": {
     "serve": "nodemon --ext js,graphql ./bin/serve.js",
-    "build:linux-x64":
-      "../../node_modules/pkg/lib-es5/bin.js . -t node9-linux-x64 --output ./dist/bauxite-gql-linux-x64",
-    "build:freebsd-x64":
-      "../../node_modules/pkg/lib-es5/bin.js . -t node9-freebsd-x64 --output ./dist/bauxite-gql-freebsd-x64",
-    "build:win-x64":
-      "../../node_modules/pkg/lib-es5/bin.js . -t node9-win-x64 --output ./dist/bauxite-gql-win-x64",
-    "build:macos-x64":
-      "../../node_modules/pkg/lib-es5/bin.js . -t node9-macos-x64 --output ./dist/bauxite-gql-macos-x64"
+    "build:linux-x64": "../../node_modules/pkg/lib-es5/bin.js . -t node9-linux-x64 --output ./dist/bauxite-gql-linux-x64",
+    "build:freebsd-x64": "../../node_modules/pkg/lib-es5/bin.js . -t node9-freebsd-x64 --output ./dist/bauxite-gql-freebsd-x64",
+    "build:win-x64": "../../node_modules/pkg/lib-es5/bin.js . -t node9-win-x64 --output ./dist/bauxite-gql-win-x64",
+    "build:macos-x64": "../../node_modules/pkg/lib-es5/bin.js . -t node9-macos-x64 --output ./dist/bauxite-gql-macos-x64"
   },
   "bin": {
     "bauxite-gql": "./bin/serve.js"
   },
   "dependencies": {
-    "@bauxite/launcher-api": "^0.1.0",
+    "@bauxite/launcher-api": "^0.3.0",
     "apollo-server-express": "^1.3.2",
     "express": "^4.16.2",
     "express-graphiql": "^1.0.0",
