--- a/packages/launcher-graphql/package.json
+++ b/packages/launcher-graphql/package.json
@@ -20,6 +20,7 @@
     "graphql": "^0.12.3",
     "graphql-iso-date": "^3.3.0",
     "graphql-tools": "^2.14.1",
+    "lodash": "^4.17.4",
     "open": "^0.0.5"
   },
   "devDependencies": {
