--- a/packages/launcher-api-forge/package.json
+++ b/packages/launcher-api-forge/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "date-fns": "^1.29.0",
     "decompress": "^4.2.0",
+    "fs-extra": "^5.0.0",
     "lodash": "^4.17.4",
     "node-fetch": "^1.7.3"
   },
