--- a/packages/launcher-api-forge/package.json
+++ b/packages/launcher-api-forge/package.json
@@ -8,7 +8,8 @@
     "decompress": "^4.2.0",
     "fs-extra": "^5.0.0",
     "lodash": "^4.17.4",
-    "node-fetch": "^1.7.3"
+    "node-fetch": "^1.7.3",
+    "xz": "^1.2.2"
   },
   "publishConfig": {
     "access": "public"
