--- a/packages/launcher-electron/package.json
+++ b/packages/launcher-electron/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bauxite/launcher-electron",
-  "version": "0.4.0-alpha.a415ffc9",
+  "version": "0.4.0",
   "publishConfig": {
     "access": "public"
   }
