--- a/packages/launcher-graphql/package.json
+++ b/packages/launcher-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bauxite/launcher-graphql",
-  "version": "0.4.0-alpha.a415ffc9",
+  "version": "0.4.0",
   "author": "Jim O'Brien <bauxite@jimmed.net>",
   "scripts": {
     "serve": "nodemon --ext js,graphql ./bin/serve.js"
@@ -10,7 +10,7 @@
     "bauxite-gql": "./bin/serve.js"
   },
   "dependencies": {
-    "@bauxite/launcher-api": "^0.4.0-alpha.a415ffc9",
+    "@bauxite/launcher-api": "^0.4.0",
     "@bauxite/launcher-api-forge": "^0.3.0",
     "apollo-server-express": "^1.3.2",
     "express": "^4.16.2",
