--- a/packages/minecraft-installer/package.json
+++ b/packages/minecraft-installer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bauxite/minecraft-installer",
-  "version": "0.4.0-alpha.a415ffc9",
+  "version": "0.4.0",
   "scripts": {
     "test": "jest"
   },
