--- a/packages/launcher-api/package.json
+++ b/packages/launcher-api/package.json
@@ -4,9 +4,9 @@
   "main": "./lib/index.js",
   "author": "Jim O'Brien <bauxite@jimmed.net>",
   "dependencies": {
-    "@bauxite/minecraft-assets": "^0.4.0-alpha.a415ffc9",
-    "@bauxite/minecraft-auth": "^0.4.0-alpha.a415ffc9",
-    "@bauxite/minecraft-installer": "^0.4.0-alpha.a415ffc9",
+    "@bauxite/minecraft-assets": "^0.4.0",
+    "@bauxite/minecraft-auth": "^0.4.0",
+    "@bauxite/minecraft-installer": "^0.4.0",
     "decompress": "^4.2.0",
     "fs-extra": "^5.0.0",
     "lodash": "^4.17.4",
@@ -15,7 +15,7 @@
     "ps-node": "^0.1.6"
   },
   "peerDependencies": {
-    "@bauxite/launcher-api-forge": "^0.1.0"
+    "@bauxite/launcher-api-forge": "^0.4.0"
   },
   "publishConfig": {
     "access": "public"
