--- a/packages/launcher-cli/package.json
+++ b/packages/launcher-cli/package.json
@@ -6,7 +6,8 @@
     "bx": "./bin/cli.js"
   },
   "dependencies": {
-    "@bauxite/launcher-api": "^0.4.0-alpha.a415ffc9",
+    "@bauxite/launcher-api": "^0.4.0",
+    "@bauxite/launcher-api-forge": "^0.4.0",
     "asciify-image": "^0.1.1",
     "chalk": "^2.3.0",
     "cli-progress-bar": "^1.0.1",
