--- a/packages/launcher-cli/package.json
+++ b/packages/launcher-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bauxite/launcher-cli",
-  "version": "0.4.0-alpha.a415ffc9",
+  "version": "0.4.0",
   "bin": {
     "bauxite": "./bin/cli.js",
     "bx": "./bin/cli.js"
