--- a/packages/launcher-api/package.json
+++ b/packages/launcher-api/package.json
@@ -9,10 +9,12 @@
     "@bauxite/minecraft-installer": "^0.5.0",
     "decompress": "^4.2.0",
     "fs-extra": "^5.0.0",
+    "listr": "^0.13.0",
     "lodash": "^4.17.4",
     "make-fetch-happen": "^2.6.0",
     "optional-require": "^1.0.0",
-    "ps-node": "^0.1.6"
+    "ps-node": "^0.1.6",
+    "rxjs": "^5.5.6"
   },
   "peerDependencies": {
     "@bauxite/launcher-api-forge": "^0.5.0"
