--- a/packages/launcher-cli/package.json
+++ b/packages/launcher-cli/package.json
@@ -12,8 +12,11 @@
     "chalk": "^2.3.0",
     "cli-progress-bar": "^1.0.1",
     "inquirer": "^4.0.2",
+    "listr": "^0.13.0",
     "make-fetch-happen": "^2.6.0",
     "ora": "^1.3.0",
+    "rxjs": "^5.5.6",
+    "tail": "^1.2.3",
     "tty-table": "^2.5.5",
     "yargs": "^10.0.3"
   },
